# accelerated-library-integrations

./: README.md
CUDA-DL-cuDNN/: README.md  requirements-torch-cu128.txt  requirements.txt
CUDA-DL-cuDNN/examples/: README.md  benchmark_cudnn.py  cudnn_resnet18_benchmark.ipynb  fused_conv_bias_relu_demo.cu  install_verification.py  profile_inference_for_nsight.py
CUDA-DL-cuDNN/results/: README.md  brev_l4.csv  brev_l4_single_inference.csv  dgx_spark.csv
CUDA-DL-cuDNN/screenshots/: README.md  brev_l4_single_inference.nsys-rep
CUDA-Math-cuBLAS/examples/: README.md
CUDA-Math-cuFFT/: README.md
CUDA-Math-cuFFT/examples/: image_fft.cu
CUDA-Math-cuRAND/: README.md
CUDA-Math-cuRAND/examples/: curand_hello-output  hello_cmd-output.md
CUDA-Math-cuRAND/scripts/: curand_hello.cu
CUDA-Q-QEC/: README.md  requirements.txt
CUDA-Q-QEC/examples/: SETUP.md  cpu_gpu_benchmark.py  decoder_benchmark.py  plot_results.py  run_project.py  surface_memory.py  surface_sweep.py
CUDA-Q-QEC/results/: ARTIFACTS.md  SUMMARY.md  cpu_gpu_syndrome_brev_l4.csv  decoder_lut_bp_d7_brev_l4.csv  decoder_lut_bp_sweep_brev_l4.csv  steane_brev_l4.csv  surface_brev_l4.csv  surface_sweep_lut_brev_l4.csv  surface_sweep_qldpc_brev_l4.csv
Math-cuBLAS/: README.md
NCCL/: NOTES.md  README.md  requirements.txt
RAPIDS-cuDF/: README.md
RAPIDS-cuGraph/: README.md
RAPIDS-cuML/: README.md
RAPIDS-cuVS/: README.md
cuDNN/: README.md
cuFFT/: README.md
cuFFT/examples/: benchmark.py  image_fft.cu  pyproject.toml
cuPQC/: README.md  setup.sh
warp/: README.md  requirements.txt
(+29 files in other folders)
